--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -7,8 +7,6 @@ on:
     types: [opened, synchronize]
   push:
     branches: [main]
-  repository_dispatch:
-    types: [e2e-tests-complete]
 
 jobs:
   prepare:
@@ -170,7 +168,7 @@ jobs:
             "ios-distribution": "INTERNAL",
             "ios-build-profile": "preview",
             "ios-app-version": "1.0.58",
-            "ios-git-commit": "2a068de5c10a937c45e9dc25e04c33f1360be376",
+            "ios-git-commit": "${{ steps.preview-build.outputs.ios-git-commit }}",
             "android-update-permalink": "https://expo.dev/projects/53171ba4-60ca-40cb-b3e6-b0c2393677b8/updates/019bdd88-1a82-7424-9d2b-20788a63ecf4",
             "android-branch": "DEV-1936/block-on-e2e",
             "android-update-runtime-version": "84c9efb850e71475bdf5ca9270cca37229321e21",
@@ -258,6 +256,7 @@ jobs:
           rm -f .env
         working-directory: apps/${{ matrix.project }}
 
+    # probably not needed. will be provided by expo
     outputs:
       project: "betterangels"
       project-id: "53171ba4-60ca-40cb-b3e6-b0c2393677b8"
@@ -313,109 +312,6 @@ jobs:
       # ios-update-qr-url: ${{ steps.expo-update.outputs.ios-update-qr-url }}
       # simulator-ios-build-link: ${{ steps.simulator-build.outputs.ios-build-link }}
 
-  preview-post-e2e:
-    environment: preview
-    env:
-      BRANCH_NAME: ${{ github.event.client_payload['branch-name'] || github.head_ref || github.ref_name }}
-    runs-on: ubuntu-latest
-    if: github.event_name == 'repository_dispatch'
-    permissions:
-      pull-requests: write # REQUIRED: Allow comments on PRs
-      contents: read # Required for actions/checkout
-      actions: write # REQUIRED: Allow updating fingerprint in action caches
-    steps:
-      - name: ⚠️ Fail if E2E tests failed
-        if: github.event.client_payload.status != 'success'
-        run: |
-          echo "E2E tests failed with status: ${{ github.event.client_payload.status }}"
-          exit 1
-
-      - name: 🏗 Check out repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-          ref: ${{ github.event.client_payload['github-sha'] || github.event.client_payload['github-ref'] || github.ref }}
-
-      - name: 📝 Comment on PR
-        if: github.event.client_payload['pr-number'] != ''
-        uses: edumserrano/find-create-or-update-comment@v3
-        with:
-          issue-number: ${{ github.event.client_payload['pr-number'] }}
-          body-includes: '<!-- continuous-deploy-fingerprint-projectId:${{ github.event.client_payload[''project-id''] }} -->'
-          comment-author: 'github-actions[bot]'
-          body: |
-            <!-- continuous-deploy-fingerprint-projectId:${{ github.event.client_payload['project-id'] }} -->
-            🚀 Expo continuous deployment is ready for **${{ github.event.client_payload['project'] }}**!
-
-            - Project → **${{ github.event.client_payload['project'] }}**
-            - Environment → **Preview**
-            - Platforms → **android**, **ios**
-            - Scheme → **${{ github.event.client_payload['slug'] }}**
-
-            &nbsp; | 🤖 Android | 🍎 iOS
-            --- | --- | ---
-            Runtime Version | `${{ github.event.client_payload['android-runtime-version'] }}` | `${{ github.event.client_payload['ios-runtime-version'] }}`
-            Build Details | [Build Permalink](${{ github.event.client_payload['android-build-link'] }})<br /><details><summary>Details</summary>Distribution: `${{ github.event.client_payload['android-distribution'] }}`<br />Build profile: `${{ github.event.client_payload['android-build-profile'] }}`<br />Runtime version: `${{ github.event.client_payload['android-runtime-version'] }}`<br />App version: `${{ github.event.client_payload['android-app-version'] }}`<br />Git commit: `${{ github.event.client_payload['android-git-commit'] }}`</details> | [Build Permalink](${{ github.event.client_payload['ios-build-link'] }})<br /><details><summary>Details</summary>Distribution: `${{ github.event.client_payload['ios-distribution'] }}`<br />Build profile: `${{ github.event.client_payload['ios-build-profile'] }}`<br />Runtime version: `${{ github.event.client_payload['ios-runtime-version'] }}`<br />App version: `${{ github.event.client_payload['ios-app-version'] }}`<br />Git commit: `${{ github.event.client_payload['ios-git-commit'] }}`</details>
-            Update Details | [Update Permalink](${{ github.event.client_payload['android-update-permalink'] }})<br /><details><summary>Details</summary>Branch: `${{ github.event.client_payload['android-branch'] }}`<br />Runtime version: `${{ github.event.client_payload['android-update-runtime-version'] }}`<br />Git commit: `${{ github.event.client_payload['android-update-commit'] }}`</details> | [Update Permalink](${{ github.event.client_payload['ios-update-permalink'] }})<br /><details><summary>Details</summary>Branch: `${{ github.event.client_payload['ios-branch'] }}`<br />Runtime version: `${{ github.event.client_payload['ios-update-runtime-version'] }}`<br />Git commit: `${{ github.event.client_payload['ios-update-commit'] }}`</details>
-            Update QR   | <a href="${{ github.event.client_payload['android-update-qr-url'] }}"><img src="${{ github.event.client_payload['android-update-qr-url'] }}" width="250px" height="250px" /></a> | <a href="${{ github.event.client_payload['ios-update-qr-url'] }}"><img src="${{ github.event.client_payload['ios-update-qr-url'] }}" width="250px" height="250px" /></a>
-
-            **iOS Simulator Build:** [Simulator Build Link](${{ github.event.client_payload['simulator-ios-build-link'] }})
-          edit-mode: replace
-
-      - name: 📝 Set Git Variables
-        id: set-git-vars
-        run: |
-          COMMIT_ID=$(git rev-parse HEAD)
-          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s" HEAD)
-
-          {
-            echo "commit-id=${COMMIT_ID}"
-            echo "commit-message=${COMMIT_MESSAGE}"
-          } >> $GITHUB_OUTPUT
-
-      - name: 📣 Post to Slack
-        if: github.event.client_payload['github-ref'] == 'refs/heads/main'
-        uses: slackapi/slack-github-action@v1.27.0
-        with:
-          payload: |
-            {
-              "channel": "#tech-outreach-main",
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*New code has landed in main for project ${{ github.event.client_payload['project'] }}!* \n*Commit:* `${{ steps.set-git-vars.outputs.commit-id }}`\n*Message:* ${{ steps.set-git-vars.outputs.commit-message }}"
-                  }
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*📱 iOS*\n\n<${{ github.event.client_payload['ios-update-qr-url'] }}|Update>\n<${{ github.event.client_payload['ios-build-link'] }}|Build>\n<${{ github.event.client_payload['simulator-ios-build-link'] }}|Simulator Build>"
-                  }
-                },
-                {
-                  "type": "divider"
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*🤖 Android*\n\n<${{ github.event.client_payload['android-update-qr-url'] }}|Update>\n<${{ github.event.client_payload['android-build-link'] }}|Build>"
-                  }
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-
-      - name: 🧼 Cleanup .env file
-        if: always()
-        run: |
-          rm -f .env
-        working-directory: apps/${{ github.event.client_payload['project'] }}
 
   production:
     if: |
