--- a/libs/expo/shared/clients/tsconfig.json
+++ b/libs/expo/shared/clients/tsconfig.json
@@ -9,7 +9,8 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "jsx": "react"
+    "jsx": "react",
+    "types": ["jest", "node"]
   },
   "files": [],
   "include": [],
