--- a/libs/expo/shared/utils/tsconfig.json
+++ b/libs/expo/shared/utils/tsconfig.json
@@ -7,7 +7,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["jest", "node"]
   },
   "files": [],
   "include": [],
