--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -100,7 +100,8 @@
     "@expo/metro-config": "*",
     "react-native-nitro-cookies": "*",
     "react-native-mmkv": "*",
-    "jotai-family": "*"
+    "jotai-family": "*",
+    "rxjs": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
