--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -147,6 +147,21 @@ jobs:
           slug: ${{ steps.preview-build.outputs.slug }}
           project-id: ${{ steps.preview-build.outputs.project-id }}
 
+      - name: 🧷 Write commit status metadata for EAS
+        if: github.event_name == 'pull_request' || github.event_name == 'merge_group'
+        working-directory: apps/${{ matrix.project }}
+        env:
+          GITHUB_STATUS_CONTEXT: e2e/maestro
+          GITHUB_STATUS_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+        run: |
+          set -euo pipefail
+          {
+            echo "GITHUB_REPOSITORY=${GITHUB_REPOSITORY}"
+            echo "GITHUB_STATUS_SHA=${GITHUB_STATUS_SHA}"
+            echo "GITHUB_STATUS_CONTEXT=${GITHUB_STATUS_CONTEXT}"
+          } >> .env
+
       - name: 🧪 Run E2E Tests
         working-directory: apps/${{ matrix.project }}
         run: |
