--- a/apps/betterangels/.eas/workflows/e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/e2e-test.yml
@@ -6,6 +6,9 @@ jobs:
       runtime_version: ${{ steps.set_vars.outputs.runtime_version }}
       group_id: ${{ steps.set_vars.outputs.group_id }}
       project_id: ${{ steps.set_vars.outputs.project_id }}
+      github_repository: ${{ steps.set_vars.outputs.github_repository }}
+      github_status_sha: ${{ steps.set_vars.outputs.github_status_sha }}
+      github_status_context: ${{ steps.set_vars.outputs.github_status_context }}
     steps:
       - id: set_vars
         run: |
@@ -13,9 +16,60 @@ jobs:
           GROUP_ID=$(grep '^GROUP_ID=' ${WORK_DIR}/.env | cut -d '=' -f2-)
           PROJECT_ID=$(grep '^PROJECT_ID=' ${WORK_DIR}/.env | cut -d '=' -f2-)
           RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' ${WORK_DIR}/.env | cut -d '=' -f2-)
+          GITHUB_REPOSITORY="$(grep '^GITHUB_REPOSITORY=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          GITHUB_STATUS_SHA="$(grep '^GITHUB_STATUS_SHA=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          GITHUB_STATUS_CONTEXT="$(grep '^GITHUB_STATUS_CONTEXT=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
           set-output group_id "$GROUP_ID"
           set-output project_id "$PROJECT_ID"
           set-output runtime_version "$RUNTIME_VERSION"
+          set-output github_repository "$GITHUB_REPOSITORY"
+          set-output github_status_sha "$GITHUB_STATUS_SHA"
+          set-output github_status_context "$GITHUB_STATUS_CONTEXT"
+
+  set_pending_github_status:
+    after: [get_vars]
+    steps:
+      - id: set_pending_status
+        run: |
+          set -euo pipefail
+
+          WORK_DIR="/home/expo/workingdir/temporary-custom-build/apps/betterangels"
+          GITHUB_REPOSITORY="$(grep '^GITHUB_REPOSITORY=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          GITHUB_STATUS_SHA="$(grep '^GITHUB_STATUS_SHA=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          GITHUB_STATUS_CONTEXT="$(grep '^GITHUB_STATUS_CONTEXT=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          # Prefer EAS-provided env var (EAS secret), fallback to .env if present.
+          GITHUB_STATUS_TOKEN="${GITHUB_STATUS_TOKEN:-$(grep '^GITHUB_STATUS_TOKEN=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)}"
+
+          if [ -z "${GITHUB_REPOSITORY:-}" ] || [ -z "${GITHUB_STATUS_SHA:-}" ] || [ -z "${GITHUB_STATUS_CONTEXT:-}" ]; then
+            echo "Missing GITHUB_REPOSITORY / GITHUB_STATUS_SHA / GITHUB_STATUS_CONTEXT; cannot post commit status."
+            exit 1
+          fi
+          if [ -z "${GITHUB_STATUS_TOKEN:-}" ]; then
+            echo "Missing GITHUB_STATUS_TOKEN; cannot post commit status."
+            exit 1
+          fi
+
+          export GITHUB_STATUS_CONTEXT
+          BODY="$(python3 - <<'PY'
+          import json, os
+          print(json.dumps({
+            "state": "pending",
+            "context": os.environ["GITHUB_STATUS_CONTEXT"],
+            "description": "E2E tests running on EAS",
+          }))
+          PY
+          )"
+
+          curl --fail-with-body -sS \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -H "Authorization: Bearer ${GITHUB_STATUS_TOKEN}" \
+            "https://api.github.com/repos/${GITHUB_REPOSITORY}/statuses/${GITHUB_STATUS_SHA}" \
+            -d "${BODY}" \
+            >/dev/null
+
+          echo "Posted pending status ${GITHUB_STATUS_CONTEXT} for ${GITHUB_REPOSITORY}@${GITHUB_STATUS_SHA}"
 
   get_android_build:
     needs: [get_vars]
@@ -52,3 +106,59 @@ jobs:
     params:
       build_id: ${{ needs.get_ios_build.outputs.build_id }}
       flow_path: ['.maestro/landing.yml']
+
+  set_final_github_status:
+    after: [maestro_android_test, maestro_ios_test]
+    steps:
+      - id: set_final_status
+        run: |
+          set -euo pipefail
+
+          WORK_DIR="/home/expo/workingdir/temporary-custom-build/apps/betterangels"
+          GITHUB_REPOSITORY="$(grep '^GITHUB_REPOSITORY=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          GITHUB_STATUS_SHA="$(grep '^GITHUB_STATUS_SHA=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          GITHUB_STATUS_CONTEXT="$(grep '^GITHUB_STATUS_CONTEXT=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)"
+          # Prefer EAS-provided env var (EAS secret), fallback to .env if present.
+          GITHUB_STATUS_TOKEN="${GITHUB_STATUS_TOKEN:-$(grep '^GITHUB_STATUS_TOKEN=' ${WORK_DIR}/.env | cut -d '=' -f2- || true)}"
+
+          ANDROID_STATUS="${ANDROID_E2E_STATUS:-}"
+          IOS_STATUS="${IOS_E2E_STATUS:-}"
+
+          if [ -z "${GITHUB_REPOSITORY:-}" ] || [ -z "${GITHUB_STATUS_SHA:-}" ] || [ -z "${GITHUB_STATUS_CONTEXT:-}" ]; then
+            echo "Missing GITHUB_REPOSITORY / GITHUB_STATUS_SHA / GITHUB_STATUS_CONTEXT; cannot post commit status."
+            exit 1
+          fi
+          if [ -z "${GITHUB_STATUS_TOKEN:-}" ]; then
+            echo "Missing GITHUB_STATUS_TOKEN; cannot post commit status."
+            exit 1
+          fi
+
+          if [ "${ANDROID_STATUS}" = "success" ] && [ "${IOS_STATUS}" = "success" ]; then
+            STATE="success"
+            DESC="E2E tests passed"
+          else
+            STATE="failure"
+            DESC="E2E tests failed"
+          fi
+
+          export STATE DESC GITHUB_STATUS_CONTEXT
+          BODY="$(python3 - <<'PY'
+          import json, os
+          print(json.dumps({
+            "state": os.environ["STATE"],
+            "context": os.environ["GITHUB_STATUS_CONTEXT"],
+            "description": os.environ["DESC"],
+          }))
+          PY
+          )"
+
+          curl --fail-with-body -sS \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -H "Authorization: Bearer ${GITHUB_STATUS_TOKEN}" \
+            "https://api.github.com/repos/${GITHUB_REPOSITORY}/statuses/${GITHUB_STATUS_SHA}" \
+            -d "${BODY}" \
+            >/dev/null
+
+          echo "Posted ${STATE} status ${GITHUB_STATUS_CONTEXT} for ${GITHUB_REPOSITORY}@${GITHUB_STATUS_SHA}"
